# RosForSwiftAndSwiftPro

pro_moveit_config/: CMakeLists.txt  package.xml
swift_moveit_config/: CMakeLists.txt  package.xml
swiftpro/: CMakeLists.txt  package.xml
swiftpro/launch/: pro_control.launch  pro_control.launch.py  pro_display.launch.py  swift_control.launch.py  swift_display.launch.py
swiftpro/src/: swiftpro_moveit_node.cpp  swiftpro_read_node.cpp  swiftpro_rviz_node.cpp  swiftpro_write_node.cpp
